Set up node, sass and rebuild nav

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,4 @@
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
@@ -5,10 +6,6 @@
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import 'layouts/default';
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
+@import 'components/nav';
