--- a/resources/sass/components/_nav.scss
+++ b/resources/sass/components/_nav.scss
@@ -1,8 +1,7 @@
 .navbar {
     padding: 0.5rem 0;
-
+    height: 4rem;
     background-color: #f1f1f1;
-
     transition: all ease 0.5s;
 
     a {
@@ -60,7 +59,17 @@
 }
 
 .nav-link {
+    position: relative;
+
     &:hover, &:active {
-        border-bottom: 2px solid $link-color;
+        &::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            bottom: 0rem;
+            left: 0;
+            height: 2px;
+            background-color: $link-color;
+        }
     }
 }
