--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6314,7 +6314,8 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 body {
-  background-color: #ffffff; }
+  background-color: #ffffff;
+  font-size: 18px; }
 
 hr {
   border-color: #e9e9e9; }
