Add and style home content

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
-$font-family-sans-serif: "Nunito", sans-serif;
-$font-size-base: 0.9rem;
+$font-family-sans-serif: "Lato", sans-serif;
+$font-size-base: 1rem;
 $line-height-base: 1.6;
 
 // Colors
