--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6314,7 +6314,7 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 html {
-  font-size: 18px; }
+  font-size: 16px; }
 
 body {
   background-color: #ffffff; }
@@ -6385,6 +6385,13 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     height: 2px;
     background-color: #c00303; }
+
+.page-content {
+  font-size: 18px;
+  margin-top: 3rem; }
+
+.page-content__image {
+  width: 100%; }
 
 .main-title {
   background: #f1f1f1;
