--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,7 @@
 @import 'layouts/default';
 
 @import 'components/nav';
+@import 'components/page-content';
 @import 'components/main-title';
 @import 'components/headline';
 
