--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,4 +10,4 @@
 @import 'components/page-content';
 @import 'components/main-title';
 @import 'components/headline';
-
+@import 'components/board-member';
