--- a/resources/sass/components/_headline.scss
+++ b/resources/sass/components/_headline.scss
@@ -1,6 +1,10 @@
 .headline {
     position: relative;
 
+    font-size: 1.7rem;
+    margin-bottom: 10px;
+    margin-top: 20px;
+
     &::before {
         content: "";
         position: absolute;
