--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,3 +11,4 @@
 @import 'components/main-title';
 @import 'components/headline';
 @import 'components/board-member';
+@import 'components/article-card';
