--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,5 @@
 @import 'components/headline';
 @import 'components/board-member';
 @import 'components/article-card';
+@import 'components/event-card';
+@import 'components/form';
