Handle responses from paypal properly

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6489,7 +6489,7 @@ h1, h2, h3, h4, h5, h6 {
     border: 1px solid black; }
   .form-field input[type=submit] {
     padding: 0.5rem 2rem;
-    background-color: #c00303;
+    background-color: #23DB2A;
     outline: none;
     border: 1px solid black;
     border-radius: 0.5rem;
