--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -21,7 +21,7 @@
 
     input[type=submit] {
         padding: 0.5rem 2rem;
-        background-color: $link-color;
+        background-color: #23DB2A;
         outline: none;
         border: 1px solid black;
         border-radius: 0.5rem;
