--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6447,7 +6447,8 @@ h1, h2, h3, h4, h5, h6 {
   border: 1px solid #e2e0e0;
   border-radius: 0.5rem;
   color: #000000;
-  display: block; }
+  display: block;
+  margin: 15px 0; }
 
 .article-card__name {
   font-size: 2rem; }
