--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6325,6 +6325,10 @@ hr {
 a {
   color: #c00303; }
 
+p {
+  margin-bottom: 1.5rem;
+  line-height: 1.8; }
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   line-height: 1.1;
