--- a/resources/sass/layouts/_default.scss
+++ b/resources/sass/layouts/_default.scss
@@ -14,6 +14,11 @@ a {
     color: $link-color;
 }
 
+p {
+    margin-bottom: 1.5rem;
+    line-height: 1.8;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
     line-height: 1.1;
