Remove type from kit and enforce sane size

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6474,8 +6474,10 @@ h1, h2, h3, h4, h5, h6 {
   display: block; }
 
 .event-card__image {
-  width: calc(100% + 32px);
-  margin: -16px -16px 15px; }
+  max-width: calc(100% + 32px);
+  max-height: 300px;
+  margin: 0 auto 15px;
+  display: block; }
 
 .event-card__name {
   font-size: 2rem; }
