Switch to base price terminology

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6480,7 +6480,8 @@ h1, h2, h3, h4, h5, h6 {
   display: block; }
 
 .event-card__name {
-  font-size: 2rem; }
+  font-size: 2rem;
+  margin-bottom: 0.5rem; }
 
 .event-card__type {
   font-size: 1rem; }
