--- a/resources/sass/components/_event-card.scss
+++ b/resources/sass/components/_event-card.scss
@@ -18,10 +18,7 @@
     margin-bottom: 0.5rem;
 }
 
-.event-card__type {
+.event-card__info {
     font-size: 1rem;
-}
-
-.event-card__price {
-    font-size: 1rem;
+    margin-bottom: 0.5rem;
 }
