--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6400,14 +6400,19 @@ h1, h2, h3, h4, h5, h6 {
 .main-title {
   background: #f1f1f1;
   margin-top: 0;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 75px;
+  padding-bottom: 75px;
   color: #c00303;
   position: relative;
-  background-image: url("/assets/images/creation.jpg");
-  background-size: cover;
+  background-image: url("/assets/images/banner.png");
+  background-size: 1160px auto;
   background-repeat: no-repeat;
-  background-position: center; }
+  background-position: center;
+  background-color: black; }
+  @media (max-width: 1180px) {
+    .main-title {
+      background-size: 1200px auto;
+      background-position: left; } }
   .main-title h1 {
     font-size: 43px;
     margin-bottom: 0; }
