--- a/resources/sass/components/_main-title.scss
+++ b/resources/sass/components/_main-title.scss
@@ -1,15 +1,21 @@
 .main-title {
     background: #f1f1f1;
     margin-top: 0;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 75px;
+    padding-bottom: 75px;
     color: $link-color;
     position: relative;
 
-    background-image: url('/assets/images/creation.jpg');
-    background-size: cover;
+    background-image: url('/assets/images/banner.png');
+    background-size: 1160px auto;
     background-repeat: no-repeat;
     background-position: center;
+    background-color: black;
+
+    @media (max-width: 1180px) {
+        background-size: 1200px auto;
+        background-position: left;
+    }
 
     h1 {
         font-size: 43px;
