--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6400,25 +6400,26 @@ h1, h2, h3, h4, h5, h6 {
 .main-title {
   background: #f1f1f1;
   margin-top: 0;
-  padding-top: 75px;
-  padding-bottom: 75px;
-  color: #c00303;
+  padding-top: 55px;
+  padding-bottom: 55px;
+  color: white;
   position: relative;
   background-image: url("/assets/images/banner.png");
   background-size: 1160px auto;
   background-repeat: no-repeat;
   background-position: center;
   background-color: black; }
+  .main-title h1 {
+    font-size: 3rem;
+    margin-bottom: 0; }
+  .main-title .main-title__text-holder {
+    padding-left: 15%; }
   @media (max-width: 1180px) {
     .main-title {
       background-size: 1200px auto;
-      background-position: left; } }
-  .main-title h1 {
-    font-size: 43px;
-    margin-bottom: 0; }
-    @media (min-width: 768px) {
-      .main-title h1 {
-        font-size: 61px; } }
+      background-position: left; }
+      .main-title .main-title__text-holder {
+        padding-left: 130px; } }
 
 .headline {
   position: relative;
