Improve main title layout on mobile

--- a/resources/sass/components/_main-title.scss
+++ b/resources/sass/components/_main-title.scss
@@ -29,4 +29,12 @@
             padding-left: 130px;
         }
     }
+
+    @media (max-width: 600px) {
+        background-image: none;
+
+        .main-title__text-holder {
+            padding-left: 0;
+        }
+    }
 }
