Cleaned up handling of available/past kits

--- a/resources/sass/app.css
+++ b/resources/sass/app.css
@@ -6961,6 +6961,11 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1rem;
   margin-bottom: 0.5rem; }
 
+.event-card__subtle {
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+  color: grey; }
+
 .form {
   margin-bottom: 3rem; }
 
