--- a/resources/sass/components/_event-card.scss
+++ b/resources/sass/components/_event-card.scss
@@ -22,3 +22,8 @@
     font-size: 1rem;
     margin-bottom: 0.5rem;
 }
+
+.event-card__subtle {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+    color: grey; }
