Slightly better tournament formatting

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,3 +17,4 @@
 @import 'components/article';
 @import 'components/accordion';
 @import 'components/coc-quote';
+@import 'components/tournament-table';
