Use Lucida as the default font

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,5 @@
 // Typography
-$font-family-sans-serif: "Lato", sans-serif;
+$font-family-sans-serif: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 $font-size-base: 1rem;
 $line-height-base: 1.6;
 
